--- a/src/apps/core/templates/base.html
+++ b/src/apps/core/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar is-dark" id="navbarapp">
     <div class="navbar-brand">
-        <a class="navbar-item" href="#">Saul Gadgets</a>
+        <a class="navbar-item" href="{% url 'frontpage' %}">Saul Gadgets</a>
         <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="main-navbar" role="button">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
@@ -19,7 +19,7 @@
     </div>
     <div class="navbar-menu" id="main-navbar">
         <div class="navbar-end">
-            <a class="navbar-item">Contact</a>
+            <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
         </div>
     </div>
 </nav>
