--- a/src/apps/core/templates/frontpage.html
+++ b/src/apps/core/templates/frontpage.html
@@ -1,5 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="title">The Front Page</h1>
+<h1 class="title">The Front Page</h1>
+<div class="columns is-multiline">
+    {% for product in products %}
+    <div class="columns is-3">
+        <div class="card">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-content">
+                        <p class="title is-4">{{ product.title }}</p>
+                        <p class="subtitle is-6">{{ product.price }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer">
+                <a href="{% url 'product_detail' product.slug %}" class="card-footer-item">View</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
